# alpha-rule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alpha_rule/: __init__.py
alpha_rule/evaluation/: __init__.py  evaluator.py  neural_evaluator.py  rule_simulator.py
alpha_rule/grammar/: __init__.py  allen.py  grammar.py  production.py
alpha_rule/helpers/: generic.py  matrix_operations.py
alpha_rule/mcts/: __init__.py  backprop.py  debug_trace.py  expansion.py  node.py  normalize.py  replay.py  selection.py  self_play.py  value_collect.py  value_target.py
alpha_rule/nn/: __init__.py  encoder.py  heads.py  model.py  tokenizer.py  training.py
alpha_rule/policy_agents/: __init__.py
alpha_rule/rules/: allen_matrix.py  rule_matching.py
alpha_rule/tests/: conftest.py  run_tests.py  test_allen_matrix.py  test_alphazero_csv_logger.py  test_dead_rule_persistence.py  test_debug_trace.py  test_expansion.py  test_filtered_mean.py  test_forbidden_and_masking.py  test_grammar.py  test_incremental_matrix.py  test_matrix_operations.py  test_max_backup.py  test_mcts_node.py  test_model.py  test_neural_evaluator.py  test_normalize.py  test_percentile_backup.py  test_play.py  test_puct_selection.py  test_q_learning_builder.py  test_q_learning_evals.py  test_replay_buffer.py  test_root_value.py  test_rule_matching.py  test_rule_simulator.py  test_rule_string_node.py  (+16 more)
docs/: 00_scaffold.md  01_symbolic_core.ipynb  02_grammar.ipynb  03_mcts_engine.ipynb  04_neural_network.ipynb  05_neural_evaluator.ipynb  06_training.ipynb  07_rl_backend.ipynb  README.md
(+13 files in other folders)
